Fix: In News SVGs appear too small, closes #80

--- a/web/wp-content/themes/lf-theme/source/scss/components/_archive.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/components/_archive.scss
@@ -178,6 +178,12 @@
             display: flex;
             align-content: center;
             justify-content: center;
+
+            position: absolute;
+            width: 100%;
+            height: 100%;
+
+
         }
 
         // apply to all images (inc default).
